--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,12 @@ div {
   position: absolute;
   top: 40%;
   left: 50%;
-  padding: 20px;
   resize: both;
-  overflow: auto;
   text-align: center;
   font-family: 'Press Start 2P', cursive;
+}
+@media (min-width: 320px) {
+	div {
+		width: 100%;
+	}
 }
