Added triangle hint

--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,23 @@ a {
 .octicon {
 	font-size: 64px;
 }
+#triangle-hint {
+	position: absolute;
+	top: 100%;
+	left:50%;
+	transform: translate(-50%, -100%);
+  	
+  	-webkit-animation: pulsate 2s ease-out;
+  	-webkit-animation-iteration-count: infinite;
+  	-webkit-animation-delay: 2s;
+    opacity: 0.0;
+}
+@-webkit-keyframes pulsate {
+	0% {-webkit-transform: opacity: 0.0}
+    50% {opacity: 1.0;}
+    100% {-webkit-transform: opacity: 0.0;}
+}
+
 @media (min-width: 320px) {
 	div {
 		width: 100%;
