About Me should be at the top

--- a/css/index.css
+++ b/css/index.css
@@ -48,8 +48,8 @@ body {
 #prof-pics img {
 	height: 100%;
 }
-#about-section h3 {
-	margin-top: 30px;
+#about-section h1 {
+	margin-bottom: 30px;
 }
 
 /** Style for the portfolio section */
