--- a/css/index.css
+++ b/css/index.css
@@ -136,48 +136,48 @@ a {
 
 /** Animations */
 @-webkit-keyframes slide-out-right {
-	0% {left: 50%; -webkit-transform: -webkit-translate(-50%, -50%)}
-	100% {left: 150%; -webkit-transform: -webkit-translate(-50%, -50%);}
+	0% {left: 50%; }
+	100% {left: 150%; }
 }
 @keyframes slide-out-right {
-	0% {left: 50%; transform: translate(-50%, -50%)}
-	100% {left: 150%; transform: translate(-50%, -50%);}
+	0% {left: 50%; }
+	100% {left: 150%; }
 }
 
 @-webkit-keyframes slide-out-left {
-	0% {left: 50%; -webkit-transform: -webkit-translate(-50%, -50%)}
-	100% {left: -100%; -webkit-transform: -webkit-translate(-50%, -50%);}
+	0% {left: 50%; }
+	100% {left: -100%; }
 }
 @keyframes slide-out-left {
-	0% {left: 50%; transform: translate(-50%, -50%)}
-	100% {left: -100%; transform: translate(-50%, -50%);}
+	0% {left: 50%; }
+	100% {left: -100%; }
 }
 
 @-webkit-keyframes slide-in-left {
-	0% {left: 150%; -webkit-transform: -webkit-translate(-50%, -50%)}
-	100% {left: 50%; -webkit-transform: -webkit-translate(-50%, -50%);}
+	0% {left: 150%; }
+	100% {left: 50%; }
 }
 @keyframes slide-in-left {
-	0% {left: 150%; transform: translate(-50%, -50%)}
-	100% {left: 50%; transform: translate(-50%, -50%);}
+	0% {left: 150%; }
+	100% {left: 50%; }
 }
 
 @-webkit-keyframes slide-in-right {
-	0% {left: -100%; -webkit-transform: -webkit-translate(-50%, -50%)}
-	100% {left: 50%; -webkit-transform: -webkit-translate(-50%, -50%);}
+	0% {left: -100%; }
+	100% {left: 50%; }
 }
 @keyframes slide-in-right {
-	0% {left: -100%; transform: translate(-50%, -50%)}
-	100% {left: 50%; transform: translate(-50%, -50%);}
+	0% {left: -100%; }
+	100% {left: 50%; }
 }
 
 @-webkit-keyframes pulsate {
-	0% {-webkit-transform: opacity: 0.0}
+	0% {-webkit-transform: opacity: 0.0;}
     50% {opacity: 1.0;}
     100% {-webkit-transform: opacity: 0.0;}
 }
 @keyframes pulsate {
-	0% {transform: opacity: 0.0}
+	0% {transform: opacity: 0.0;}
     50% {opacity: 1.0;}
     100% {transform: opacity: 0.0;}
 }
