--- a/css/retro_theme.css
+++ b/css/retro_theme.css
@@ -1,11 +1,19 @@
 @font-face {
-	font-family: 'Press Start 2P';
-	src: url(../fonts/PressStart2P.ttf);
+    font-family: 'press_start_2pregular';
+    src: url('../fonts/pressstart2p-webfont.eot');
+    src: url('../fonts/pressstart2p-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/pressstart2p-webfont.woff2') format('woff2'),
+         url('../fonts/pressstart2p-webfont.woff') format('woff'),
+         url('../fonts/pressstart2p-webfont.ttf') format('truetype'),
+         url('../fonts/pressstart2p-webfont.svg#press_start_2pregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
 body {
 	background-color: #000;
 	color: #0f0;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'press_start_2pregular', cursive;
 }
 
 /** Use more legible text for the about and portfolio paragraphs **/
