--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,7 @@ body {
 	-webkit-transform: translate(0, -50%);
 	transform: translate(0, -50%);
 	cursor: pointer;
+	margin-left: 10px;
 }
 #menu-right {
 	position: absolute;
