--- a/css/retro_theme.css
+++ b/css/retro_theme.css
@@ -13,13 +13,15 @@
 body {
 	background-color: #000;
 	color: #0f0;
-    font-family: 'press_start_2pregular', cursive;
+}
+h1, h3{
+    font-family: 'press_start_2pregular';
 }
 
 /** Use more legible text for the about and portfolio paragraphs **/
 p, li{
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 1.15em;
+	font-family: serif;
+	font-size: 18px;
 }
 
 /** Also make the octicons white */
