Updating the About Me section to be more crazy.

--- a/css/index.css
+++ b/css/index.css
@@ -49,10 +49,10 @@ body {
 #prof-pics {
 	text-align: center;
 	height: 400px; 
-	cursor: pointer
 }
 #prof-pics img {
 	height: 100%;
+	cursor: pointer;
 }
 #about-section h1 {
 	margin-bottom: 30px;
