Darken the text color by 10%

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,7 +10,7 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #3c484e !default;
+$text-color:       darken(#3c484e, 10%) !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
