--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -4,13 +4,13 @@
 
 $base-font-family: "Fira Sans", sans-serif !default;
 $base-font-size:   16px !default;
-$base-font-weight: 200 !default;
+$base-font-weight: normal !default;
 $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       darken(#3c484e, 10%) !default;
+$text-color:       #3c484e !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
