--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,15 +2,15 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Fira Sans", sans-serif !default;
+$base-font-family: sans-serif !default;
 $base-font-size:   16px !default;
-$base-font-weight: normal !default;
+$base-font-weight: 300 !default;
 $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #3c484e !default;
+$text-color:       darken(#3c484e, 20%) !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
